base config setup

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,28 @@
 # Kafka
+KAFKA_BROKER=kafka:9092
 KAFKA_EXT_PORT=9093
 KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
 KAFKA_CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
+
+# Data Source
+API_KEY=
+API_HOST=https://api.coingecko.com
+API_PATH=/api/v3
+TRACKED_COIN_IDS=bitcoin,ethereum,litecoin
+FETCH_INTERVAL_MS=30000
+
+# Postgres
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DATABASE_URL=
+
+# Redis
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+
+# External
+FRONTEND_PORT=
+API_PORT=
+WEBSOCKET_PORT=
