--- a/data-fetcher/package.json
+++ b/data-fetcher/package.json
@@ -2,14 +2,23 @@
   "name": "data-fetcher",
   "version": "1.0.0",
   "description": "Periodically fetches crypto data from the CoinGecko API and publishes it to a Kafka topic.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsc --watch & node --watch dist/index.js"
   },
   "keywords": [],
   "author": "chematus",
   "license": "ISC",
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.3",
+    "tsc-alias": "^1.8.15",
+    "typescript": "^5.8.3"
   }
 }
