--- a/websocket-service/tsconfig.json
+++ b/websocket-service/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
-      "@root/*": ["../*"]
+      "@root/*": ["../*"],
     },
     "strict": true,
     "esModuleInterop": true,
@@ -16,8 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "declarationMap": true,
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"],
 }
