--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,17 +2,39 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "Displays the crypto data, connects to the `websocket-service` for live updates, and interacts with the `api-service`.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "chematus",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "dotenv": "^16.5.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0"
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.8.3",
+    "typescript-plugin-css-modules": "^5.1.0",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "@observablehq/plot": "^0.6.17",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
