--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,12 @@ API_PATH=/api/v3
 TRACKED_COIN_IDS=bitcoin,ethereum,litecoin
 FETCH_INTERVAL_MS=30000
 
-# Postgres
+# Database
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DB=
-DATABASE_URL=
+POSTGRES_DB=cryptopulse
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
 # Redis
 REDIS_HOST=
@@ -26,3 +27,7 @@ REDIS_PASSWORD=
 FRONTEND_PORT=3000
 API_PORT=
 WEBSOCKET_PORT=
+
+# API service
+API_PORT=5001
+API_BASE_PATH=/api/v1
