--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,16 +76,88 @@ services:
       kafka:
         condition: service_healthy
 
-  # frontend:
-  #   build:
-  #     context: .
-  #     dockerfile: ./frontend/Dockerfile
-  #   container_name: frontend
-  #   ports: 
-  #     - "${FRONTEND_PORT:-3000}:80"
-  #   networks: 
-  #     - crypto-pulse-net
+  api-service:
+    build:
+      context: .
+      dockerfile: ./api-service/Dockerfile
+    container_name: api-service
+    restart: on-failure
+    ports:
+      - "${API_PORT:-5001}:5001"
+    networks:
+      - crypto-pulse-net
+    environment:
+      NODE_ENV: ${NODE_ENV:-development}
+      API_PORT: ${API_PORT:-5001}
+      API_BASE_PATH: ${API_BASE_PATH:-/api/v1}
+      TRACKED_COIN_IDS: ${TRACKED_COIN_IDS:-bitcoin,ethereum}
+      POSTGRES_HOST: ${POSTGRES_HOST:-postgres}
+      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      LOG_DIR: ${LOG_DIR:-logs}
+      LOG_DEFAULT_LEVEL: ${LOG_DEFAULT_LEVEL:-info}
+      LOG_LEVEL_API_SERVICE: ${LOG_LEVEL_API_SERVICE}
+    depends_on:
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
+    ports:
+      - "${POSTGRES_EXPOSED_PORT:-5432}:5432"
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_DB: ${POSTGRES_DB:-cryptopulse}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./postgres-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - crypto-pulse-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-cryptopulse}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "${REDIS_EXPOSED_PORT:-6379}:6379"
+    networks:
+      - crypto-pulse-net
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  frontend:
+    build:
+      context: .
+      dockerfile: ./frontend/Dockerfile
+    container_name: frontend
+    ports:
+      - "${FRONTEND_PORT:-3000}:80"
+    networks: 
+      - crypto-pulse-net
+    depends_on:
+      - api-service
+      - websocket-service
 
 networks:
   crypto-pulse-net:
     driver: bridge
+
+volumes:
+  postgres_data:
