--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "chematus",
@@ -16,18 +20,27 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.0.3",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/ui": "^3.2.4",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "dotenv": "^16.5.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "jsdom": "^26.1.0",
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
     "typescript-plugin-css-modules": "^5.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4",
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
