--- a/api-service/package.json
+++ b/api-service/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc --watch & node --watch dist/index.js"
+    "dev": "tsc --watch & node --watch dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "chematus",
@@ -25,7 +28,13 @@
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.29",
     "@types/pg": "^8.15.4",
+    "@types/supertest": "^6.0.3",
+    "eslint-plugin-jest": "^29.0.1",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "tsc-alias": "^1.8.16",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
