--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.5.3",
+    "redis-mock": "^0.56.3",
     "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
