--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,101 +3,103 @@ name: Crypto Pulse CI
 on:
   push:
     branches: [ "main", "develop" ]
-
   pull_request:
     branches: [ "main", "develop" ]
-
   workflow_dispatch:
 
 jobs:
-  test-api-service:
+  install-root-deps:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./api-service
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Install root dependencies
+        run: npm ci
+
+  test-api-service:
+    runs-on: ubuntu-latest
+    needs: install-root-deps
+    defaults:
+      run:
+        working-directory: ./api-service
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: api-service/package-lock.json
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run tests
         run: npm test
 
   test-data-fetcher:
     runs-on: ubuntu-latest
+    needs: install-root-deps
     defaults:
       run:
         working-directory: ./data-fetcher
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: data-fetcher/package-lock.json
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run tests
         run: npm test
 
   test-websocket-service:
     runs-on: ubuntu-latest
+    needs: install-root-deps
     defaults:
       run:
         working-directory: ./websocket-service
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: websocket-service/package-lock.json
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run tests
         run: npm test
 
   test-frontend:
     runs-on: ubuntu-latest
+    needs: install-root-deps
     defaults:
       run:
         working-directory: ./frontend
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-
       - name: Install dependencies
         run: npm ci
-
       - name: Run tests
         run: npm test
