--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,57 @@
-# Kafka
-KAFKA_BROKER=kafka:9092
-KAFKA_EXT_PORT=9093
-KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
-KAFKA_CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
+# This file serves as a template for the required environment variables.
+# Copy this file to .env and fill in the values.
 
-# Data Source
-API_KEY=
-API_HOST=https://api.coingecko.com
-API_PATH=/api/v3
-TRACKED_COIN_IDS=bitcoin,ethereum,litecoin
+# --- General ---
+NODE_ENV=development
+
+# --- Frontend ---
+# The external port your browser will connect to for the React app.
+FRONTEND_PORT=3000
+# The full URL for the frontend to connect to the WebSocket service.
+REACT_APP_WEBSOCKET_URL=ws://localhost:8080
+# The full URL for the frontend to connect to the API service.
+REACT_APP_API_URL=http://localhost:5001/api/v1
+
+# --- API Service ---
+# The external port for the REST API.
+API_PORT=5001
+API_BASE_PATH=/api/v1
+# The URL of the frontend, for CORS configuration.
+CORS_ORIGIN=http://localhost:3000
+
+# --- WebSocket Service ---
+# The external port for the WebSocket server.
+WEBSOCKET_PORT=8080
+
+# --- Data Fetcher Service ---
+# Required: Get a free API key from https://www.coingecko.com/en/api
+COINGECKO_API_KEY=
+# The list of coin IDs to track from CoinGecko.
+TRACKED_COIN_IDS=bitcoin,ethereum,solana,dogecoin
+# The interval in milliseconds to fetch new data.
 FETCH_INTERVAL_MS=30000
 
-# Database
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+# --- Kafka ---
+KAFKA_BROKER=kafka:9092
+KAFKA_TOPIC=crypto-updates
+KAFKA_GROUP_ID=crypto-websocket-group
+# The external port to map on your host machine for connecting with a Kafka client.
+KAFKA_EXTERNAL_PORT=9093
+# Required: Generate a unique ID once by running: docker run --rm confluentinc/cp-kafka:7.5.0 kafka-storage random-uuid
+KAFKA_CLUSTER_ID=
+
+# --- PostgreSQL ---
+POSTGRES_USER=cryptouser
+POSTGRES_PASSWORD=your_secure_password
 POSTGRES_DB=cryptopulse
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+# The external port to map on your host machine for connecting with a DB client.
+POSTGRES_EXPOSED_PORT=5433
 
-# Redis
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
-
-# External
-FRONTEND_PORT=3000
-API_PORT=
-WEBSOCKET_PORT=
-
-# API service
-API_PORT=5001
-API_BASE_PATH=/api/v1
+# --- Redis ---
+REDIS_HOST=redis
+REDIS_PORT=6379
+# The external port to map on your host machine.
+REDIS_EXPOSED_PORT=6380
+# REDIS_PASSWORD=
